Bug 350018 - Can't launch position independent executables
Summary: Can't launch position independent executables
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.14.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 381412 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-07-08 05:28 UTC by Alex
Modified: 2017-06-19 22:06 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2015-07-08 05:28:50 UTC
I'm unable to run an executable of this kind:
$ file foo
foo: ELF 64-bit LSB shared object, x86-64, version 1 (SYSV), dynamically linked (uses shared libs), for GNU/Linux 2.6.32, BuildID[sha1]=2c65c1c5fa4182783066b29fca5a7362eb95c325, not stripped

After a bit of research I found the same problem for the gnome file manager:
https://bugzilla.gnome.org/show_bug.cgi?id=737849

Reproducible: Always

Steps to Reproduce:
1. download from the internet a tar with an executable
2. extract the files from the archive
3. try to execute the file, and fail
Comment 1 Frank Reininghaus 2015-07-08 20:18:42 UTC
Thanks for the bug report. It's not a Dolphin issue - we use KIO for launching applications. I can reproduce the same behavior in FolderView.
Comment 2 David Faure 2017-01-14 10:29:37 UTC
This is https://bugs.freedesktop.org/show_bug.cgi?id=97226
Comment 3 Luca Beltrame 2017-05-28 12:35:48 UTC
openSUSE is going to adopt distro-wide PIE soon, which means that KRun will break all over the place. The upstream report in FDO seems dead, as well.
Short of shoehorning the wrong MIME type in KRun, what else can be done?
Comment 4 Fabian Vogt 2017-05-29 11:39:09 UTC
Git commit 4122b52fee540f6b7cdd8fde2f55e2f7c2673b1a by Fabian Vogt.
Committed on 29/05/2017 at 11:38.
Pushed by fvogt into branch 'master'.

Identify PIE binaries (application/x-sharedlib) as executable files

Summary:
x86_64 binaries compiled with PIE are just shared objects with the
executable bit set. Without this patch, kio does not know that they
can be executed as well, causing "kioclient5 exec" to ask for an
application that can handle application/x-sharedlib.

Test Plan: Can run applications fine again.

Reviewers: dfaure, aacid

Reviewed By: dfaure

Subscribers: asturmlechner, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D6002

M  +4    -1    src/widgets/krun.cpp
M  +1    -1    src/widgets/krun.h

https://commits.kde.org/kio/4122b52fee540f6b7cdd8fde2f55e2f7c2673b1a
Comment 5 Elvis Angelaccio 2017-06-19 22:06:47 UTC
*** Bug 381412 has been marked as a duplicate of this bug. ***