Identify PIE binaries (application/x-sharedlib) as executable files

Summary:
x86_64 binaries compiled with PIE are just shared objects with the
executable bit set. Without this patch, kio does not know that they
can be executed as well, causing "kioclient5 exec" to ask for an
application that can handle application/x-sharedlib.

BUG: 350018

Test Plan: Can run applications fine again.

Reviewers: dfaure, aacid

Reviewed By: dfaure

Subscribers: asturmlechner, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D6002